--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Create new article</h1>
 
+<% if @article.errors.any? %>
+  <h2>The following errors prevent the article from getting save</h2>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @article do |f| %>
 
   <p>
