--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,6 @@
 <p>
   Description: <%= @article.description %>
 </p>
+
+<%= link_to 'Edit article', edit_article_path(@article) %>
+<%= link_to 'Back to index', articles_path %>
