show page bootstrap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,15 @@ $navbar-default-bg: #e6ecff;
   background-color: black;
 }
 
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description {
+  margin-top: 2px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
