--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,6 +58,11 @@ $navbar-default-bg: #e6ecff;
   padding-bottom: 15px;
 }
 
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
