--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,3 @@
-<h1 align="Center">Sign-up for Alpha Blog</h1>
-
 <%= render 'shared/errors', obj: @user %>
 
 <div class='row'>
@@ -34,7 +32,7 @@
 
     <div class='form-group'>
       <div class='col-sm-offset-2 col-sm-10'>
-        <%= f.submit "Sign-up here", class: 'btn btn-primary btn-lg' %>
+        <%= f.submit(@user.new_record? ? "Sign-up here" : "Update here", class: 'btn btn-primary btn-lg') %>
       </div>
     </div>
   <% end %>
