--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,10 @@
-<p id="notice"><%= notice %></p>
+<h1 align="center">Welcome to <%= @user.username %>'s page</h1>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4 center">
+    <%= gravatar_for @user, size: 250 %>
+  </div>
+</div>
 
-<p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+</br>
+<h4 align="center"><%= @user.username %>'s articles</h4>
+<%= render 'articles/article', obj: @user.articles %>
