--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,16 @@
-<p id="notice"><%= notice %></p>
+<h1 align="center">Listing of Alpha Bloggers</h1>
 
-<h1>Listing Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', signup_path %>
+<div align="center">
+  <% @users.each do |user| %>
+    <ul class="listing">
+      <div class="row">
+        <div class="well col-md-4 col-md-offset-4">
+          <li><%= link_to gravatar_for(user), user_path(user) %></li>
+          <li class="article-title"><%= link_to user.username, user_path(user) %></li>
+          <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+          </li>
+        </div>
+      </div>
+    </ul>
+  <% end %>
+</div>
