--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,9 +17,11 @@
     <hr>
     <%= simple_format(@article.description) %>
     <div class="article-actions">
-      <%= link_to 'Edit article', edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-      <%= link_to 'Delete this article', article_path(@article), method: :delete,
-                                          data: { confirm: "Are you sure you want to delete this article?"},
-                                          class: "btn btn-xs btn-danger" %>
-      <%= link_to 'Back to index', articles_path, class: "btn btn-xs btn-success" %>
+      <% if logged_in? and current_user = @article.user %>
+        <%= link_to 'Edit article', edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+        <%= link_to 'Delete this article', article_path(@article), method: :delete,
+                                            data: { confirm: "Are you sure you want to delete this article?"},
+                                            class: "btn btn-xs btn-danger" %>
+        <%= link_to 'Back to index', articles_path, class: "btn btn-xs btn-success" %>
+      <% end %>
     </div>
